--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,96 +1,1 @@
-<!-- <nav class="navbar navbar-dark bg-primary">
-  <a href="/" class="navbar-brand">Angular CRUD</a>
-</nav> -->
-<!-- *ngIf="edit" -->
-
-<!-- <ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{item.title}} - {{item.id}}
-  </li>
-</ul> -->
-
-<div class="container-lg">
-  <div class="row pt-4">
-    <div class="col-md-8">
-      
-      <form >
-        <div class="card mb-3">
-          <div class="">
-            <input id="new-product-title" (input)="OnTitleChange($event)" placeholder="Título" class="card-header form-control text-center bg-dark text-white border-0" value="{{selectedProduct.title}}"/>
-          </div>
-          <label for="file-input" class="cursor-pointer text-center d-flex align-items-center justify-content-center">
-              <figure class="figure">
-                <figcaption class="figure-caption text-right" *ngIf="isUploading">{{uploadPercentage}}%</figcaption>
-                <img class="img-fluid" width=512 alt="{{selectedProduct.title}}" src="{{selectedProduct.img}}" />
-              </figure>
-          </label>
-
-          <input (input)="OnFileChanged($event)" class="file-input" class="d-none" id="file-input" type="file" accept="image/*" />
-          <div class="card-body ">
-            <div class="form-group">
-              <select id="new-product-category" (input)="OnCategoryChange($event)" class="custom-select mr-sm-2">
-                <option>Seleccionar Categoría</option>
-                <option *ngFor="let category of categories" value="{{category.id}}" [selected]="category.id == selectedProduct.category" >{{category.title}}</option>
-              </select>
-            </div>
-
-            <textarea id="new-product-description" (input)="OnDescriptionChange($event)" placeholder="Descripción" class="card-text form-control" rows=5 value="{{selectedProduct.description}}"></textarea>
-          </div>
-          <div class="card-footer">
-            <div class="float-right">
-              <button id="new-product-delete" data-toggle="modal" data-target=".modal" *ngIf="selectedProduct.id != newProduct.id" class="btn btn-danger ml-2">Eliminar</button>
-            </div>
-          </div>
-        </div>
-      </form>
-
-
-
-    </div>
-
-    <div class="col-md-4 vh-100 overflow-auto">
-      <h4 class="text-center text-secondary col-12">Selecciona un producto</h4>
-      <div class="row px-1">
-    
-        <div class="card mb-3 mx-1 col-5 p-0 cursor-pointer" (click)="SetSelectedProduct(newProduct)" [ngClass]="{'bg-primary text-light': selectedProduct.id == '-1'}">
-          <img src="{{newProduct.img}}" />
-          <div class="card-body p-2">
-            <p class="card-title text-center">Nuevo producto</p>
-          </div>
-        </div>
-        
-        <div *ngFor="let product of products" class="card mb-3 mx-1 col-5 p-0 cursor-pointer" (click)="SetSelectedProduct(product)" [ngClass]="{'bg-primary text-light': selectedProduct.id == product.id}" >
-          <img src="{{product.img}}" />
-          <div class="card-body p-2">
-            <p class="card-title text-center">{{product.title}}</p>
-          </div>
-        </div>
-        
-      </div>
-
-    </div>
-
-  </div>
-</div>
-
-<div class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">¿Eliminar el producto seleccionado?</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>{{selectedProduct.title}}</p>
-        <p>{{selectedProduct.description}}</p>
-        <p><img width=200 class="img-fluid" src="{{selectedProduct.img}}" /></p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)="Delete(selectedProduct)" data-dismiss="modal">Aceptar</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-      </div>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
