--- a/src/app/front-end/front-end.component.html
+++ b/src/app/front-end/front-end.component.html
@@ -1,1 +1,33 @@
-<p>front-end works!</p>
+<section>
+    <div class="container-lg">
+        <div class="row">
+            <div class="col-12 nav-container">
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                
+                <div class="nav-wrapper">
+                    <ul class="nav-slider">
+                        <li *ngFor="let category of categories">{{category.title}}</li>
+                    </ul>
+                </div>
+
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="row bg-light catalog">
+            <div class="col-6 p-3 d-flex mhv-75">
+                <div class="" style="border: 1px solid;" >
+                    <img class="img-fluid" src="assets/img/902fd4506a6acbae0a837472eba6eaec.png" alt="">
+                </div>
+            </div>
+            <div class="col-6 p-3">
+                <h1>WIP</h1>
+            </div>
+        </div>
+    </div>
+</section>
