--- a/src/app/front-end/front-end.component.html
+++ b/src/app/front-end/front-end.component.html
@@ -19,14 +19,80 @@
                 </a>
             </div>
         </div>
-        <div class="row bg-light catalog">
-            <div class="col-6 p-3 d-flex mhv-75">
-                <div class="" style="border: 1px solid;" >
-                    <img class="img-fluid" src="assets/img/902fd4506a6acbae0a837472eba6eaec.png" alt="">
-                </div>
+    </div>
+    <div class="container-lg main bg-light pb-4">
+        <div class="row">
+            <div class="col-12 col-md-6 p-3 text-center order-md-last">
+                <img class="img-fluid mt-5 mb-2  w-50" width="60%" src="assets/img/logo.svg" alt="">
+                <h5>Un hohar, mil historias felices</h5>
+                
+                <form id="search-form">
+                    <div class="input-group mt-4">
+                        <input type="text" class="form-control" placeholder="¿Buscas un producto en especial?">
+                        <div class="input-group-append">
+                            <button class="btn" type="button"></button>
+                        </div>
+                    </div>
+                </form>
+                
+                <div class="slogan-2 mt-4">Las mejores alternativas para hacer tu vida más fácil.</div>
+                
+                <div class="cart"><span>10</span></div>
+
             </div>
-            <div class="col-6 p-3">
-                <h1>WIP</h1>
+            <div class="col-12 col-md-6 p-3 py-5 my-5 featured-1 d-flex align-items-center">
+                <img class="img-fluid my-5 m-auto" width="80%" src="assets/img/902fd4506a6acbae0a837472eba6eaec.png" alt="Estufa">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 panel-1 d-flex align-items-center categories">
+                <h2>LÍNEAS DE PRODUCTO</h2>
+            </div>
+            <div class="col-12 p-3 mb-5">
+                
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    </ol>
+
+                    <div class="carousel-inner my-3">
+                        <div class="carousel-item active px-5">
+                            <div class="d-flex justify-content-between">
+                                <img src="assets/img/2be7100c59ec08a375edcb5542c0357d.png" class="d-inline w-25" alt="...">
+                                <img src="assets/img/bd0a6e57f3438c1a70813b7650f062af.png" class="d-inline w-25" alt="...">
+                                <img src="assets/img/Imagen 353.jpg" class="d-inline w-25" alt="...">
+                            </div>
+                        </div>
+                        <div class="carousel-item px-5">
+                            <div class="d-flex justify-content-between">
+                                <img src="assets/img/c5a944a448318a9460618a802a6322a5.png" class="d-inline w-25 img-fluid" alt="...">
+                                <img src="assets/img/c744f2d2d8b251595874322af5d995cc.png" class="d-inline w-25 img-fluid" alt="...">
+                                <img src="assets/img/f0f96ff8d6f95f0eabf83d9bd9c51576.png" class="d-inline w-25 img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 panel-1 d-flex align-items-center featured-products">
+                <h2>PRODUCTOS RECOMENDADOS</h2>
+            </div>
+            <div class="col-12 panel-1 d-flex align-items-center mx-auto carousel-2">
+                <img class="img-fluid mx-auto my-3 px-2" src="assets/img/banner.png" alt="Banner">
             </div>
         </div>
     </div>
