--- a/src/app/front-end/front-end.component.css
+++ b/src/app/front-end/front-end.component.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: FuturaBold;
+    src: url(src/assets/fonts/Futura-Bold.ttf);
+  }
+  @font-face {
+    font-family: FuturaMedium;
+    src: url(src/assets/fonts/Futura-Medium-BT.ttf);
+  }
+  @font-face {
+    font-family: AsapRegular;
+    src: url(src/assets/fonts/Asap-Regular.ttf);
+  }
+
 body, html{
     background-color: #ff0101 !important;
 }
@@ -36,7 +49,6 @@ section{
 
 ul.nav-slider
 {
-    /* position: absolute; */
     width: 100%;
     left: 0px;
     right: 0px;
@@ -45,6 +57,7 @@ ul.nav-slider
 
 ul.nav-slider > li
 {
+    font-family: AsapRegular;
     display: inline;
     margin-right: 15px;
     font-weight: bold;
@@ -75,13 +88,196 @@ ul.nav-slider > li:hover
     width: 20px;
 }
 
-.catalog{
+.carousel-indicators li,
+.carousel-control-next,
+.carousel-control-prev{
+    filter: invert(100%);
+}
+
+.carousel-indicators
+{
+    bottom: -90px;
+}
+
+.carousel-indicators li
+{
+    width: 10px;
+    height: 10px;
+    border-radius: 50% !important;
+}
+
+.main{
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    min-height: 1840px;
-    padding: 0px;
+    min-height: calc(100vh - 80px);
+    /* padding: 0px; */
     background-image: url('src/assets/img/background.png');
+    background-repeat: no-repeat;
+    background-position: center 70%;
+}
+
+#search-form
+{
+    background-color: #e2e2e2;
+    border-radius: 5px;
+    color: #181818;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#search-form input
+{
+    text-align: center;
+    font-size: 18px;
+    background: none;
+    border: none;
+}
+
+#search-form input::placeholder
+{
+    color: #909090 !important;
+}
+
+#search-form button
+{
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('src/assets/img/search-icon.svg');
+    display: block;
+    width: 38px;
+    height: 38px;
+    margin-right: 10px;
+
+}
+.cart
+{
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('src/assets/img/cart-icon-2.png');
+    display: block;
+    width: 80px;
+    height: 80px;
+    margin-top: 5px;
+    position: absolute;
+    right: -5px;
+}
+
+.cart span
+{
+    position: absolute;
+    display: block;
+    height: 25px;
+    width: 25px;
+    background-color: rgb(173, 197, 46);
+    color: #fff;
+    left: 10px;
+    top: -5px;
+    padding: 2px;
+    text-align: center;
+    line-height: normal;
+    border-radius: 50%;
+}
+
+.slogan-2
+{
+    border-left:solid 3px rgb(173, 197, 46);
+    width: 70%;
+    text-align: left;
+    padding: 1px 0px 1px 10px;
+    line-height: 18px;
+    font-size: 18px;
+    margin: 0px 0px 0px 10%;
+}
+
+.featured-products,
+.categories
+{
+    padding-left: 60px;
+}
+
+.featured-products h2,
+.categories h2
+{
+    font-weight: bold;
+}
+
+.featured-products h2:before,
+.categories h2:before
+{
+    content: '';
+    display: block;
+    height:3px;
+    width: 25%;
+    margin-bottom: 14px;
+    background-color: #181818;
+}
+
+.featured-products
+{
+    margin-top: 60px;
 }
 
 
+.featured-1
+{
+    background-image: url('src/assets/img/Grupo.svg');
+    background-repeat: no-repeat;
+    background-position: center 80%;
+    background-size: 65%;
+    margin-top: 100px !important;
+}
 
+.carousel-item
+{
+    padding-left: 10% !important;
+    padding-right: 10% !important;
+}
+
+.carousel-2
+{
+    position: relative;
+}
+
+.carousel-2::before,
+.carousel-2::after
+{
+    position:absolute;
+    content: '';
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: auto;
+    top: 0px;
+    bottom: 0px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100%;
+    cursor: pointer;
+}
+
+.carousel-2::before
+{
+    left: 0px;
+    background-image: url('src/assets/img/prev2.svg');
+}
+.carousel-2::after
+{
+    right: 0px;
+    background-image: url('src/assets/img/next2.svg');
+}
+
+
+@media screen and (max-width: 768px) {
+    .featured-products h2,
+    .categories h2
+    {
+        font-size: 20px !important;
+    }
+    .featured-1
+    {
+        margin-top: 50px !important;
+    }
+  }
