--- a/src/app/front-end/front-end.component.html
+++ b/src/app/front-end/front-end.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container-lg main bg-light pb-4">
         <div class="row">
-            <div class="col-12 col-md-6 p-3 text-center order-md-last">
+            <div class="col-12 col-md-6 p-3 text-center order-md-last" style="overflow:unset; overflow-x: hidden;">
                 <img class="img-fluid mt-5 mb-2  w-50" width="60%" src="assets/img/logo.svg" alt="">
                 <h5>Un hohar, mil historias felices</h5>
                 
